name:                   ProbabilisticMap
version:                0.2.0.0
synopsis:               Simple and Customizable Probabilistic Map
-- description:            
homepage:               dev.quietjoon.net
license:                BSD3
license-file:           LICENSE
author:                 YongJoon Joe
maintainer:             developer@quietjoon.net
-- copyright:              
category:               Data
build-type:             Simple
extra-source-files:     ChangeLog.md README.md
cabal-version:          >=1.10

library
  exposed-modules:      Data.ProbabilisticMap,
                        Data.ProbabilisticMap.Function
  -- other-modules:        
  other-extensions:     RecordWildCards,
                        CPP,
                        Rank2Types
  build-depends:        base >=4.0 && <5,
                        containers >=0.5 && <0.6,
                        mwc-random >=0.13 && <0.14,
                        vector >=0.12 && <0.13,
                        -- Usually not needed, will be seperated
                        time >=1.6 && <1.7
  -- hs-source-dirs:       
  default-language:     Haskell2010
