name:                   ProbabilisticMap
version:                0.2.0.1
synopsis:               Simple and Customizable Probabilistic Map
-- description:            
homepage:               dev.quietjoon.net
license:                BSD3
license-file:           LICENSE
author:                 YongJoon Joe
maintainer:             developer@quietjoon.net
-- copyright:              
category:               Data, Random
build-type:             Simple
extra-source-files:     ChangeLog.md README.md
cabal-version:          >=1.10

library
  exposed-modules:      Data.ProbabilisticMap,
                        Data.ProbabilisticMap.Function
  -- other-modules:        
  other-extensions:     RecordWildCards
                      , CPP
  build-depends:        base >=4.0 && <5
                      , containers
                      , mwc-random
                      -- Usually not needed, will be used when implement self-function.
                      -- , sfmt
                      -- , vector
                      -- , time >=1.6
  -- hs-source-dirs:       
  default-language:     Haskell2010
